@@ -159,7 +159,7 @@ public class UserService {
                 UserRepresentation userRepresentation = User.toUserRepresentation(user);
                 Response response = usersResource.create(userRepresentation);
                 user.setId(CreatedResponseUtil.getCreatedId(response));
-                getRealm().users().get(user.getId()).joinGroup(user.getOrganizationRequest().getFirst());
+                getRealm().users().get(user.getId()).joinGroup(user.getOrganizationRequest().get(0));
 
                 Objects.requireNonNull(user.getId(), "User ID cannot be null after creation.");
 
@@ -197,7 +197,7 @@ public class UserService {
                 UserRepresentation userRepresentation = User.toUserRepresentation(user);
                 Response response = usersResource.create(userRepresentation);
                 user.setId(CreatedResponseUtil.getCreatedId(response));
-                getRealm().users().get(user.getId()).joinGroup(user.getOrganizationRequest().getFirst());
+                getRealm().users().get(user.getId()).joinGroup(user.getOrganizationRequest().get(0));
                 Objects.requireNonNull(user.getId(), "User ID cannot be null after creation.");
 
                 LOG.info("Keycloak User created: " + user.getEmail() + ". Send reset password...");
